[SONAR] merge if statements, cleanup switch statements (#5931)